[package]
name = "lower-macros"
version = "0.2.2"
authors = ["bend-n <bend.n@outlook.com>"]
description = "desugar math where the compiler wont"
edition = "2021"
repository = "https://github.com/bend-n/lower.git"
license = "MIT"

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.32"
syn = { version = "2.0.15", features = ["full"] }

[lib]
proc-macro = true
